--- a/1_linear_algebra.ipynb
+++ b/1_linear_algebra.ipynb
@@ -6,7 +6,7 @@
       "name": "1-linear-algebra.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNMIwi5hxvX4a8lscHH2bw7"
+      "authorship_tag": "ABX9TyOx8haJY4nFKG9KvUNXdpQj"
     },
     "kernelspec": {
       "name": "python3",
@@ -40,13 +40,14 @@
         "\n",
         "逆行列が存在しない条件は、以下の通り。\n",
         "\n",
-        "$\n",
+        "$$\n",
         "\\begin{pmatrix}\n",
         "a & b \\\\\n",
         "c & d\n",
         "\\end{pmatrix}\n",
-        "$\n",
-        "という行列において、 $ a \\colon b = c \\colon d $ のとき、逆行列を持たない。\n"
+        "$$\n",
+        "\n",
+        "という行列において、 $$ a \\colon b = c \\colon d $$ のとき、逆行列を持たない。\n"
       ]
     },
     {
